name:          snowblog
version:       0.1.0.0
synopsis:      Snowdrift blog
license:       AGPL-3
license-file:  LICENSE
homepage:      https://snowdrift.coop/
bug-reports:   https://git.snowdrift.coop/pharpend/snowblog/issues
author:        Peter Harpending <peter@harpending.org>
maintainer:    Peter Harpending <peter@harpending.org>
cabal-version: >=1.10
build-type:    Simple

source-repository head
  type:     git
  location: https://git.snowdrift.coop/pharpend/snowblog.git

flag dev
  description: Turn on development settings, like auto-reload templates.
  default:     False

flag library-only
  description: Build for use with "yesod devel"
  default:     False

library
  hs-source-dirs: src
  exposed-modules:
    Application
    Foundation
    Handler.Comment
    Handler.Common
    Handler.Home
    Import
    Import.NoFoundation
    Model
    Settings
    Settings.StaticFiles
  if flag(dev) || flag(library-only)
    cpp-options: -DDEVELOPMENT
    ghc-options: -Wall -fwarn-tabs -O0
  else
    ghc-options: -Wall -fwarn-tabs -O2
  extensions:
    DeriveDataTypeable
    EmptyDataDecls
    FlexibleContexts
    FlexibleInstances
    GADTs
    GeneralizedNewtypeDeriving
    MultiParamTypeClasses
    NoImplicitPrelude
    NoMonomorphismRestriction
    OverloadedStrings
    QuasiQuotes
    RecordWildCards
    TemplateHaskell
    TupleSections
    TypeFamilies
    ViewPatterns
  build-depends:
      base ==4.8.*
    , aeson
    , bytestring
    , case-insensitive
    , classy-prelude
    , classy-prelude-conduit
    , classy-prelude-yesod
    , conduit
    , containers
    , data-default
    , directory
    , fast-logger
    , file-embed
    , hjsmin
    , http-conduit
    , monad-control
    , monad-logger
    , persistent
    , persistent-postgresql
    , persistent-template
    , safe
    , shakespeare
    , template-haskell
    , text
    , time
    , unordered-containers
    , vector
    , wai
    , wai-extra
    , wai-logger
    , warp
    , yaml
    , yesod
    , yesod-auth
    , yesod-core
    , yesod-form
    , yesod-static

executable snowblog
  if flag(library-only)
    buildable: False
  main-is:        main.hs
  hs-source-dirs: app
  build-depends:  base, snowblog
  ghc-options:    -Wall -threaded -rtsopts -with-rtsopts=-N

test-suite test
  type:           exitcode-stdio-1.0
  hs-source-dirs: test
  ghc-options:    -Wall
  main-is:        Spec.hs
  other-modules:     
    Handler.CommentSpec
    Handler.CommonSpec                  
    Handler.HomeSpec                    
    TestImport                          
  extensions: 
    CPP                                 
    DeriveDataTypeable                  
    EmptyDataDecls                      
    FlexibleContexts                    
    FlexibleInstances                   
    GADTs                               
    GeneralizedNewtypeDeriving          
    MultiParamTypeClasses               
    NoImplicitPrelude                   
    NoMonomorphismRestriction           
    OverloadedStrings                   
    QuasiQuotes                         
    TemplateHaskell
    TupleSections                       
    TypeFamilies                        
    ViewPatterns                        
  build-depends: 
      base
    , aeson                                      
    , classy-prelude                             
    , classy-prelude-yesod                       
    , hspec
    , monad-logger                               
    , persistent                                 
    , persistent-postgresql                      
    , resourcet                                  
    , shakespeare                                
    , snowblog                                   
    , transformers                               
    , yesod                                      
    , yesod-core                                 
    , yesod-test
