name:          snowblog
version:       0.1.0.0
synopsis:      Snowdrift blog
description:
  This is the blog engine for <https://snowdrift.coop/>. It is hacked together
  quickly and hastily. We eventually want this to be useful for other projects,
  so any changes to increase portability are more than welcome.
license:       AGPL-3
license-file:  LICENSE
homepage:      https://snowdrift.coop/
bug-reports:   https://git.snowdrift.coop/pharpend/snowblog/issues
category:      Web
author:        Peter Harpending <peter@harpending.org>
maintainer:    Peter Harpending <peter@harpending.org>
cabal-version: >=1.10
build-type:    Simple

source-repository head
  type:     git
  location: https://git.snowdrift.coop/pharpend/snowblog.git

flag dev
  description: Turn on development settings, like auto-reload templates.
  default:     False

flag library-only
  description: Build for use with "yesod devel"
  default:     False

library
  hs-source-dirs:   src
  default-language: Haskell2010
  exposed-modules:
    Application
    Foundation
    Handler.Comment
    Handler.Comment.Del
    Handler.Comment.Edit
    Handler.Common
    Handler.Home
    Handler.New.Comment
    Handler.New.Post
    Handler.New.StaticPage
    Handler.New.User
    Handler.Notifications
    Handler.Post
    Handler.Post.Del
    Handler.Post.Edit
    Handler.StaticPage
    Handler.StaticPage.Del
    Handler.StaticPage.Edit
    Handler.User
    Handler.User.Del
    Handler.User.Edit
    Import
    Import.NoFoundation
    Model
    Settings
    Settings.StaticFiles
  if flag(dev) || flag(library-only)
    cpp-options: -DDEVELOPMENT
    ghc-options: -Wall -fwarn-tabs -O0
  else
    ghc-options: -Wall -fwarn-tabs -O2
  default-extensions:
    DeriveDataTypeable
    EmptyDataDecls
    FlexibleContexts
    FlexibleInstances
    GADTs
    GeneralizedNewtypeDeriving
    MultiParamTypeClasses
    NoImplicitPrelude
    NoMonomorphismRestriction
    OverloadedStrings
    QuasiQuotes
    RecordWildCards
    TemplateHaskell
    TupleSections
    TypeFamilies
    ViewPatterns
  build-depends:
      base ==4.8.*
    , aeson
    , bytestring
    , case-insensitive
    , classy-prelude
    , classy-prelude-conduit
    , classy-prelude-yesod
    , conduit
    , containers
    , data-default
    , directory
    , fast-logger
    , file-embed
    , hjsmin
    , http-conduit
    , markdown
    , monad-control
    , monad-logger
    , persistent
    , persistent-postgresql
    , persistent-template
    , safe
    , shakespeare
    , template-haskell
    , text
    , time
    , unordered-containers
    , vector
    , wai
    , wai-extra
    , wai-logger
    , warp
    , yaml
    , yesod
    , yesod-auth
    , yesod-core
    , yesod-form
    , yesod-static
    , yesod-text-markdown

executable snowblog
  if flag(library-only)
    buildable: False
  main-is:          main.hs
  hs-source-dirs:   app
  default-language: Haskell2010
  build-depends:    base, snowblog
  ghc-options:      -Wall -threaded -rtsopts -with-rtsopts=-N

test-suite test
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  ghc-options:      -Wall
  main-is:          Spec.hs
  default-language: Haskell2010
  other-modules:
    Handler.CommentSpec
    Handler.CommonSpec
    Handler.HomeSpec
    TestImport
  default-extensions:
    CPP
    DeriveDataTypeable
    EmptyDataDecls
    FlexibleContexts
    FlexibleInstances
    GADTs
    GeneralizedNewtypeDeriving
    MultiParamTypeClasses
    NoImplicitPrelude
    NoMonomorphismRestriction
    OverloadedStrings
    QuasiQuotes
    TemplateHaskell
    TupleSections
    TypeFamilies
    ViewPatterns
  build-depends:
      base
    , aeson
    , classy-prelude
    , classy-prelude-yesod
    , hspec
    , monad-logger
    , persistent
    , persistent-postgresql
    , resourcet
    , shakespeare
    , snowblog
    , transformers
    , yesod
    , yesod-core
    , yesod-test
